--- a/gcart.html
+++ b/gcart.html
@@ -108,7 +108,7 @@
                     <span id="subtotal">₹0</span>
                 </div>
                 <div class="total-row">
-                    <span>Delivery Charge (10%)</span>
+                    <span>Delivery Charge </span>
                     <span id="deliveryCharge">₹0</span>
                 </div>
                 <div class="total-row grand-total">
