--- a/mytrack .html
+++ b/mytrack .html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Order Tracking | ChatPoint</title>
+  <title>My Order Tracking | ChatPoint</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     :root {
@@ -18,9 +18,8 @@
       color: var(--text);
       min-height: 100vh;
     }
-    .container { max-width: 480px; margin: 0 auto; }
+    .container { max-width: 480px; margin: 0 auto; padding: 1rem; }
 
-    /* Header like Zomato */
     .header {
       background: white;
       padding: 12px 16px;
@@ -39,13 +38,33 @@
     }
     .title { font-size: 18px; font-weight: bold; }
 
-    /* Map Section */
+    .order-card {
+      background: white;
+      border-radius: 12px;
+      margin: 16px 0;
+      overflow: hidden;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+    }
+    .order-header {
+      padding: 16px;
+      background: #fff;
+      border-bottom: 1px solid #eee;
+    }
+    .order-id {
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+    .order-status {
+      font-size: 0.9rem;
+      color: var(--primary);
+      margin-top: 4px;
+    }
+
     .map-container {
       position: relative;
-      height: 400px;
+      height: 300px;
       background: #e0e0e0;
       overflow: hidden;
-      margin: 16px 0;
     }
     .map-bg {
       width: 100%;
@@ -53,8 +72,6 @@
       object-fit: cover;
       filter: brightness(0.9);
     }
-
-    /* Dotted Path */
     .path {
       position: absolute;
       top: 0; left: 0; width: 100%; height: 100%;
@@ -70,8 +87,6 @@
       fill: none;
       stroke-dasharray: 8,8;
     }
-
-    /* Pins */
     .pin {
       position: absolute;
       font-size: 32px;
@@ -80,8 +95,6 @@
     }
     .store-pin { left: 15%; top: 70%; }
     .customer-pin { left: 80%; top: 20%; }
-
-    /* Delivery Bike */
     .bike {
       position: absolute;
       font-size: 28px;
@@ -91,18 +104,14 @@
       z-index: 5;
     }
 
-    /* Status Info */
     .status-box {
-      background: white;
-      border-radius: 12px;
       padding: 20px;
-      margin: 16px 0;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+      text-align: center;
     }
     .status-title {
-      font-size: 20px;
+      font-size: 18px;
       font-weight: bold;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
     }
     .eta {
       font-size: 16px;
@@ -114,12 +123,11 @@
       display: flex;
       justify-content: space-between;
       margin-top: 20px;
-      position: relative;
+      padding: 0 20px 20px;
     }
     .step {
       text-align: center;
       flex: 1;
-      position: relative;
     }
     .step-circle {
       width: 40px;
@@ -132,7 +140,6 @@
       justify-content: center;
       color: white;
       font-weight: bold;
-      font-size: 14px;
     }
     .step.active .step-circle {
       background: var(--primary);
@@ -146,169 +153,153 @@
       font-weight: bold;
     }
 
+    .no-orders {
+      text-align: center;
+      padding: 60px 20px;
+      color: #666;
+      font-size: 1.1rem;
+    }
     .loader {
       text-align: center;
       padding: 40px;
-      color: #666;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- Header -->
     <div class="header">
       <div class="back-btn" onclick="history.back()">←</div>
-      <div class="title">Order Tracking</div>
+      <div class="title">My Order Tracking</div>
       <div></div>
     </div>
 
-    <!-- Loading -->
     <div id="loading" class="loader">
       <i class="fas fa-spinner fa-spin fa-3x"></i>
-      <p>Loading tracking info...</p>
+      <p>Loading your orders...</p>
     </div>
 
-    <!-- Main Tracking Content -->
-    <div id="trackingContent" style="display:none;">
-      <div class="map-container">
-        <!-- Dummy Map Image (replace with your own or use Mapbox/Leaflet later) -->
-        <img src="https://images.unsplash.com/photo-1569336415965-7d80c2e3ff2a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Map" class="map-bg">
-
-        <!-- Dotted Path SVG -->
-        <div class="path">
-          <svg class="path-svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <path class="dotted-line" d="M15 70 Q 30 50, 50 45 T 80 20" />
-          </svg>
-        </div>
-
-        <!-- Store Pin -->
-        <div class="pin store-pin">
-          <i class="fas fa-store"></i>
-        </div>
-
-        <!-- Customer Pin -->
-        <div class="pin customer-pin">
-          <i class="fas fa-map-marker-alt"></i>
-        </div>
-
-        <!-- Delivery Partner Bike -->
-        <div class="bike" id="bikeIcon">
-          <i class="fas fa-motorcycle"></i>
-        </div>
-      </div>
-
-      <!-- Status Box -->
-      <div class="status-box">
-        <div class="status-title" id="statusTitle">Your order is being prepared</div>
-        <div class="eta" id="etaText">Arriving in ~20 minutes</div>
-
-        <!-- Progress Steps -->
-        <div class="progress-steps">
-          <div class="step" data-step="0">
-            <div class="step-circle">1</div>
-            <div class="step-label">Order Confirmed</div>
-          </div>
-          <div class="step" data-step="1">
-            <div class="step-circle">2</div>
-            <div class="step-label">Picked Up</div>
-          </div>
-          <div class="step" data-step="2">
-            <div class="step-circle">3</div>
-            <div class="step-label">On the Way</div>
-          </div>
-          <div class="step" data-step="3">
-            <div class="step-circle">4</div>
-            <div class="step-label">Delivered</div>
-          </div>
-        </div>
-      </div>
+    <div id="noLogin" class="no-orders" style="display:none;">
+      <p>You need to login to track your orders</p>
+      <p><a href="login.html" style="color:var(--primary);font-weight:bold;">Login Now →</a></p>
     </div>
+
+    <div id="noOrders" class="no-orders" style="display:none;">
+      <p>No active orders right now</p>
+      <p>Place an order to track it here!</p>
+    </div>
+
+    <div id="ordersList"></div>
   </div>
 
   <script>
     const API_BASE = window.location.origin;
-    const urlParams = new URLSearchParams(window.location.search);
-    const orderId = urlParams.get('orderId');
+    const loggedUser = JSON.parse(localStorage.getItem('chatpoint_user') || 'null');
 
-    if (!orderId) {
-      document.getElementById('loading').innerHTML = '<p>Invalid order ID.</p>';
+    if (!loggedUser) {
+      document.getElementById('loading').style.display = 'none';
+      document.getElementById('noLogin').style.display = 'block';
     } else {
-      fetchOrder();
-      setInterval(fetchOrder, 8000); // Refresh every 8 seconds
+      fetchUserOrders();
+      setInterval(fetchUserOrders, 10000); // Refresh every 10 seconds
     }
 
-    async function fetchOrder() {
+    async function fetchUserOrders() {
       try {
-        const res = await fetch(`${API_BASE}/api/order/${orderId}?t=${Date.now()}`);
+        const res = await fetch(`${API_BASE}/api/my-orders`, {
+          headers: { 'x-user-id': loggedUser._id }
+        });
         const data = await res.json();
 
-        if (data.success && data.order) {
-          updateTracking(data.order);
+        if (data.success && data.orders && data.orders.length > 0) {
+          // Filter only pending + confirmed (active)
+          const activeOrders = data.orders.filter(o => o.status === 'pending' || o.status === 'confirmed');
+          if (activeOrders.length === 0) {
+            showNoOrders();
+          } else {
+            renderOrders(activeOrders);
+          }
         } else {
-          document.getElementById('loading').innerHTML = '<p>Order not found.</p>';
+          showNoOrders();
         }
       } catch (err) {
         console.error(err);
+        document.getElementById('loading').innerHTML = '<p>Error loading orders. Retrying...</p>';
       }
     }
 
-    function updateTracking(order) {
+    function showNoOrders() {
       document.getElementById('loading').style.display = 'none';
-      document.getElementById('trackingContent').style.display = 'block';
+      document.getElementById('noOrders').style.display = 'block';
+    }
 
-      const progress = order.progress || 0; // 0 to 4 from delivery portal buttons
+    function renderOrders(orders) {
+      document.getElementById('loading').style.display = 'none';
 
-      const bike = document.getElementById('bikeIcon');
-      const statusTitle = document.getElementById('statusTitle');
-      const etaText = document.getElementById('etaText');
+      const list = document.getElementById('ordersList');
+      list.innerHTML = orders.map(order => {
+        const progress = order.progress || 0;
 
-      // Move bike along the path (approximate positions)
-      const positions = [
-        { left: '15%', top: '70%' },   // At store
-        { left: '35%', top: '55%' },
-        { left: '55%', top: '45%' },
-        { left: '70%', top: '30%' },
-        { left: '80%', top: '20%' }    // At customer
-      ];
+        const positions = [
+          { left: '15%', top: '70%' },   // 0: at store
+          { left: '35%', top: '55%' },   // 1
+          { left: '55%', top: '45%' },   // 2
+          { left: '70%', top: '30%' },   // 3
+          { left: '80%', top: '20%' }    // 4: delivered
+        ];
+        const pos = positions[Math.min(progress, 4)];
 
-      if (progress >= 0 && progress <= 4) {
-        const pos = positions[progress];
-        bike.style.left = pos.left;
-        bike.style.top = pos.top;
-      }
+        const messages = [
+          "Order confirmed - being prepared",
+          "Picked up from store",
+          "On the way",
+          "Almost there!",
+          "Delivered! Enjoy 🥳"
+        ];
+        const etas = ["~30 min", "~25 min", "~15 min", "~5 min", "Just now"];
 
-      // Update steps
-      document.querySelectorAll('.step').forEach((step, i) => {
-        if (i <= progress) {
-          step.classList.add('active');
-        } else {
-          step.classList.remove('active');
-        }
-      });
+        let bikeIcon = '<i class="fas fa-motorcycle"></i>';
+        if (progress === 4) bikeIcon = '<i class="fas fa-check-circle" style="font-size:36px;color:#28a745;"></i>';
 
-      // Status messages
-      const messages = [
-        "Your order has been confirmed and is being prepared",
-        "Delivery partner has picked up your order",
-        "Your order is on the way",
-        "Almost there! Your order is very close",
-        "Delivered! Enjoy your meal 🥳"
-      ];
-      const etas = [
-        "~25-30 minutes",
-        "~20-25 minutes",
-        "~10-15 minutes",
-        "~5 minutes",
-        "Delivered just now!"
-      ];
+        return `
+          <div class="order-card">
+            <div class="order-header">
+              <div class="order-id">Order #${order._id.slice(-6)}</div>
+              <div class="order-status">${order.status === 'pending' ? 'Pending Confirmation' : 'Out for Delivery'}</div>
+            </div>
 
-      statusTitle.textContent = messages[progress] || messages[0];
-      etaText.textContent = etas[progress] || etas[0];
+            <div class="map-container">
+              <img src="https://images.unsplash.com/photo-1569336415965-7d80c2e3ff2a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Map" class="map-bg">
 
-      // If delivered, change bike to checkmark
-      if (progress === 4) {
-        bike.innerHTML = '<i class="fas fa-check-circle" style="font-size:36px;color:#28a745;"></i>';
-      }
+              <div class="path">
+                <svg class="path-svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+                  <path class="dotted-line" d="M15 70 Q 30 50, 50 45 T 80 20" />
+                </svg>
+              </div>
+
+              <div class="pin store-pin"><i class="fas fa-store"></i></div>
+              <div class="pin customer-pin"><i class="fas fa-map-marker-alt"></i></div>
+
+              <div class="bike" style="left:${pos.left};top:${pos.top};">
+                ${bikeIcon}
+              </div>
+            </div>
+
+            <div class="status-box">
+              <div class="status-title">${messages[progress] || messages[0]}</div>
+              <div class="eta">${etas[progress] || etas[0]}</div>
+
+              <div class="progress-steps">
+                ${[1,2,3,4].map(num => `
+                  <div class="step ${progress >= num ? 'active' : ''}">
+                    <div class="step-circle">${num}</div>
+                    <div class="step-label">${['Prepared','Picked','On Way','Near','Delivered'][num-1]}</div>
+                  </div>
+                `).join('')}
+              </div>
+            </div>
+          </div>
+        `;
+      }).join('');
     }
   </script>
 </body>
